--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,17 @@
       <br>
       <br>
       <footer>
-        Derechos Reservados. 2018
+        <p><strong>Contacto:</strong>
+        <ul>
+          <li> <strong>Correo Electrónico: </strong><a href="mailto:cinthyarraez@gmail.com?subject=feedback">cinthyarraez@gmail.com </a>
+          <li> <strong>Teléfono:</strong> +51941061847</li>
+          <li> <strong>Redes Sociales:</strong>
+            <a href="https://www.facebook.com/cinthya.milagros" target="_blank"><img src="../images/facebook_RRSS.png" alt="Facebook_Cin" title="FollowMe_Facebook" width="1%"></a>
+            <a href="https://www.instagram.com/cinthya.milagros/?hl=es-la" target="_blank"> <img src="../images/instagram_RRSS.png" alt="Insta_Cin" title="FollowMe_Instagram" width="1%"></a>
+          </li>
+        </ul>
+        </p>
+        <p>Derechos Reservados. 2018</p>
       </footer>
   </body>
 </html>
