--- a/html/index.html
+++ b/html/index.html
@@ -19,9 +19,11 @@
       <strong>Lugar de Nacimiento:</strong>Valencia, Edo. Carabobo. <em>Venezuela</em></p>
     </section>
     <nav>
-      <a href="../html/education.html" target="_blank">Educación</a>
-        |
-      <a href="../html/experience.html" target="_blank">Experiencia</a>
+      <a href="../html/index.html">Inicio</a>
+      |
+      <a href="../html/education.html">Educación</a>
+      |
+      <a href="../html/experience.html">Experiencia</a>
     </nav>
     <section>
       <h2>Información Personal</h2>
