Boton "Declaro que la información suministrada es verídica y comprobable"

--- a/html/Education.html
+++ b/html/Education.html
@@ -95,6 +95,12 @@
           <strong>Lugar</strong>
           <textarea name="Lugar" rows="3" cols="25" required></textarea>
         </p>
+        <p>
+          <label for="accept"> Acepto términos y Condiciones</label>
+        <br>
+          <input type="checkbox" name="accept" id="accept" required>
+        </p>
+        <p>
         <input type="submit" name="Enviar" value="Enviar">
       </form>
     </section>
