--- a/html/Education.html
+++ b/html/Education.html
@@ -96,7 +96,7 @@
           <textarea name="Lugar" rows="3" cols="25" required></textarea>
         </p>
         <p>
-          <label for="accept"> Acepto términos y Condiciones</label>
+          <label for="accept">Declaro que la Información es Verídica y Comprobable</label>
         <br>
           <input type="checkbox" name="accept" id="accept" required>
         </p>
