--- a/html/Education.html
+++ b/html/Education.html
@@ -88,12 +88,12 @@
         <br>
         <p>
           <strong>Intitución</strong>
-          <textarea name="Institución" rows="2" cols="25" required></textarea>
+          <textarea type="text" name="Institución" rows="2" cols="25" required></textarea>
         </p>
         <br>
         <p>
           <strong>Lugar</strong>
-          <textarea name="Lugar" rows="3" cols="25" required></textarea>
+          <textarea type="text" name="Lugar" rows="3" cols="25" required></textarea>
         </p>
         <p>
           <label for="accept">Declaro que la Información es Verídica y Comprobable</label>
