--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hoja de Vida</title>
+    <link rel="stylesheet" href="../css/estilos.css">
   </head>
   <body>
     <header>
